--- a/手机卫士/res/layout/activity_main.xml
+++ b/手机卫士/res/layout/activity_main.xml
@@ -12,5 +12,13 @@
 	    android:layout_centerInParent="true"
 	    android:textColor="#ffffff"
 	    />
+	
+	<ProgressBar 
+	    android:layout_width="25dp"
+	    android:layout_height="25dp"
+	    android:layout_centerHorizontal="true"
+	    android:layout_below="@id/tv_welcome"
+	    android:layout_marginTop="8dp"
+	    />
 
 </RelativeLayout>
