6|用户主界面开发完成,添加"退出"功能,开放"设置"模块

--- a/手机卫士/res/values/styles.xml
+++ b/手机卫士/res/values/styles.xml
@@ -17,5 +17,15 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     	<item name="android:windowNoTitle">true</item>
     </style>
+    
+  <!-- 自定义标题栏样式 -->
+    <style name="TitleBarStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">#770000aa</item>
+    </style>
 
 </resources>
