--- a/手机卫士/res/layout/activity_settingcenter.xml
+++ b/手机卫士/res/layout/activity_settingcenter.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    		  xmlns:selfid="http://schemas.android.com/apk/res/com.example.mobilesafe"
+    xmlns:selfid="http://schemas.android.com/apk/res/com.example.mobilesafe"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -9,13 +9,22 @@
         style="@style/TitleBarStyle"
         android:text="设置中心" />
 
-   <com.example.splash.SettingRelativeLayout 
-       android:id="@+id/sr"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       selfid:title="自动更新设置"
-       selfid:desc_on="自动更新已开启"
-       selfid:desc_off="自动更新已关闭"
-       ></com.example.splash.SettingRelativeLayout>
+    <com.example.splash.SettingRelativeLayout
+        android:id="@+id/sr"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        selfid:desc_off="自动更新已关闭"
+        selfid:desc_on="自动更新已开启"
+        selfid:title="自动更新设置" >
+    </com.example.splash.SettingRelativeLayout>
+
+    <com.example.splash.SettingRelativeLayout
+        android:id="@+id/location_show"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        selfid:desc_off="自动捕捉已关闭"
+        selfid:desc_on="自动捕捉已开启"
+        selfid:title="归属地查询自动捕捉" >
+    </com.example.splash.SettingRelativeLayout>
 
 </LinearLayout>
