--- a/手机卫士/res/values/styles.xml
+++ b/手机卫士/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -31,10 +31,10 @@
 
     <!-- 分割线样式 -->
     <style name="GapLine">
-        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0.2dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
-        <item name="android:background">#77000000</item>
+        <item name="android:background">#33000000</item>
     </style>
 
     <!-- 位置提示图标打开（on） -->
