--- a/手机卫士/res/layout/activity_main.xml
+++ b/手机卫士/res/layout/activity_main.xml
@@ -4,17 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
-        style="@style/TitleBarStyle"
-        android:text="安全卫士" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/tv_titlebar"
+            style="@style/TitleBarStyle"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:text="安全卫士" />
+
+        <Button
+            android:id="@+id/menu_bar"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/menubar_selector" />
+    </LinearLayout>
 
     <GridView
         android:id="@+id/gv_item"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
-        android:numColumns="3" >
+        android:numColumns="2" >
     </GridView>
 
 </LinearLayout>
