--- a/手机卫士/res/layout/activity_onekeylock.xml
+++ b/手机卫士/res/layout/activity_onekeylock.xml
@@ -18,7 +18,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:text="激活设备管理器"
-        android:textColor="#77000077" />
+        android:textColor="#ffffff" />
 
     <TextView
         android:id="@+id/unstaller"
@@ -30,7 +30,7 @@
         android:gravity="center"
         android:padding="10dp"
         android:text="卸载一键锁屏"
-        android:textColor="#77000077" />
+        android:textColor="#ffffff" />
 
     <TextView
         android:id="@+id/wipedata"
@@ -42,6 +42,6 @@
         android:gravity="center"
         android:padding="10dp"
         android:text="清除数据"
-        android:textColor="#77000077" />
+        android:textColor="#ffffff" />
 
 </LinearLayout>
