--- a/手机卫士/res/layout/item_listview.xml
+++ b/手机卫士/res/layout/item_listview.xml
@@ -4,27 +4,43 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="0dp"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:drawablePadding="10dp"
-        android:drawableStart="@drawable/contact"
-        android:gravity="center_vertical"
-        android:padding="5dp"
-        android:text="田佳佳"
-        android:textColor="#aa0000"
-        android:textSize="20sp" />
+        android:background="@drawable/contact" />
 
     <TextView
-        android:id="@+id/phone_num"
-        android:layout_width="0dp"
+        android:layout_width="0.2dp"
         android:layout_height="match_parent"
-        android:layout_weight="0"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:text="15229022645"
-        android:textSize="20sp" />
+        android:layout_margin="5dp"
+        android:background="#77000000" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawablePadding="10dp"
+            android:gravity="center_vertical"
+            android:padding="2dp"
+            android:text="田佳佳"
+            android:textColor="#aa0000"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/phone_num"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:drawablePadding="10dp"
+            android:gravity="center"
+            android:padding="2dp"
+            android:text="15229022645"
+            android:textColor="#77000000"
+            android:textSize="20sp" />
+    </LinearLayout>
 
 </LinearLayout>
