--- a/手机卫士/res/layout/activity_tool.xml
+++ b/手机卫士/res/layout/activity_tool.xml
@@ -8,16 +8,51 @@
         style="@style/TitleBarStyle"
         android:text="高级工具" />
 
-    <Button
-        android:id="@+id/show_location"
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rec_background_selector"
-        android:drawableEnd="@drawable/point_r"
-        android:padding="10dp"
-        android:text="归属地查询"
-        android:textSize="20sp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:stretchColumns="0,1" >
 
-    <TextView style="@style/GapLine" />
+        <TableRow>
+
+            <Button
+                android:id="@+id/show_location"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/rec_background_selector"
+                android:drawablePadding="10dp"
+                android:drawableTop="@drawable/loc_search"
+                android:padding="10dp"
+                android:text="归属地查询" />
+
+            <Button
+                android:id="@+id/sms_backup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/rec_background_selector"
+                android:drawablePadding="5dp"
+                android:drawableTop="@drawable/sms_backup"
+                android:padding="10dp"
+                android:text="短信备份" />
+        </TableRow>
+
+        <TableRow>
+
+            <Button
+                android:id="@+id/update_wangted"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/rec_background_selector"
+                android:drawableTop="@drawable/update_wanted"
+                android:padding="10dp" />
+        </TableRow>
+    </TableLayout>
 
 </LinearLayout>
